kubernetes-concepts/lets-encrypt-http01-vs-dns01-solution/src/main/resources/k8s/tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop
  namespace: web
spec:
  tls:
    - hosts: [shop.lab, www.shop.lab]
      secretName: shop-tls
  rules:
    - host: shop.lab
      http:
        paths:
          - {path: /, pathType: Prefix, backend: {service: {name: shop, port: {number: 8080}}}}
    - host: www.shop.lab
      http:
        paths:
          - {path: /, pathType: Prefix, backend: {service: {name: shop, port: {number: 8080}}}}
